[gd_scene load_steps=5 format=3 uid="uid://cgpsynbfks7fp"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_vql6r"]
[ext_resource type="FontFile" uid="uid://b8psn640yevb4" path="res://Fonts/coolvetica rg.otf" id="2_gkqvo"]
[ext_resource type="LabelSettings" uid="uid://507kjm7i0gq1" path="res://ThemeStuff/title_settings.tres" id="2_m4ar6"]

[sub_resource type="LabelSettings" id="LabelSettings_p1bub"]
font = ExtResource("2_gkqvo")
font_size = 23

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vql6r")

[node name="AISettings" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.073
anchor_bottom = 0.073
offset_left = 155.0
offset_top = 0.159996
offset_right = 513.0
offset_bottom = 638.16

[node name="AISettingsLabel" type="Label" parent="AISettings"]
layout_mode = 2
text = "AI"
label_settings = ExtResource("2_m4ar6")
horizontal_alignment = 1

[node name="Speed" type="Label" parent="AISettings"]
layout_mode = 2
text = "Speed"
label_settings = SubResource("LabelSettings_p1bub")

[node name="HSlider" type="HSlider" parent="AISettings/Speed"]
layout_mode = 2
offset_top = 36.0
offset_right = 358.0
offset_bottom = 52.0
step = 0.1

[node name="PlayerSettings" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1201.0
offset_top = 79.0
offset_right = 1593.0
offset_bottom = 726.0

[node name="PlayerSettingsLabel" type="Label" parent="PlayerSettings"]
layout_mode = 2
text = "Player"
label_settings = ExtResource("2_m4ar6")

[node name="PlayerSpeed" type="Label" parent="PlayerSettings"]
layout_mode = 2
text = "Speed"
label_settings = SubResource("LabelSettings_p1bub")

[node name="SpeedSlider" type="HSlider" parent="PlayerSettings/PlayerSpeed"]
layout_mode = 2
offset_top = 36.0
offset_right = 358.0
offset_bottom = 52.0
max_value = 30.0
step = 0.1

[connection signal="value_changed" from="AISettings/Speed/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="PlayerSettings/PlayerSpeed/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
